# -CG-2020-I-Repositorio-Github

./: CMakeLists.txt  GLFWOpenGL.sln
GLFWOpenGL/: CMakeLists.txt  GLFWOpenGL.cpp  GLFWOpenGL.vcxproj  GLFWOpenGL.vcxproj.filters
Hello Triangle/: Hello Triangle.vcxproj  Hello Triangle.vcxproj.filters  HelloTriangle.cpp  Source.cpp
